--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.active{
+    background-color: red;
+}
+.active:hover{
+    background-color: red;
+}
